fastapi/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: standard
spec:
  selector:
    app: fastapi
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
