fastapi/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: standard
  labels:
    name: fastapi
spec:
  rules:
  - host: fastapi.creativeye.ovh
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fastapi-service
            port: 
              number: 5000
